# imageconverter

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  MANIFEST.in  README.md  SPEC.md  TODO.md  __init__.py  __main__.py  base64_tool.py  build.bat  changelog.txt  compressor_tool.py  cropper_tool.py  debug_build.py  heic_tool.py  image_app.py  main.py  prd.md  pyproject.toml  pytest.ini  remover_tool.py  requirements-dev.txt  requirements.txt  resized-image (3)_resized_base64.txt  resizer_tool.py  run_tests.py  setup.py  simple_build.py  test_output.txt  webp_tool.py
scripts/: __init__.py  build.py
tests/: README.md  __init__.py  conftest.py  test_compression.py  test_cropper_tool.py  test_detailed.py  test_gui_components.py  test_image_utils.py  test_simple.py
theme/: __init__.py  theme.py
tools/resizer/: image_processor.py
utils/: README.md  __init__.py  base_tool.py  dimension_controls.py  file_utils.py  image_processing.py  image_utils.py  preview.py  ui_components.py
workers/: compress_worker.py  resize_worker.py
